--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ cmake_minimum_required(VERSION 3.1)
 add_library(${PROJECT_NAME} INTERFACE)
 target_include_directories(${PROJECT_NAME} INTERFACE include)
 
-if (BUILD_YASH_MAIN)
-    add_library(${PROJECT_NAME}-main src/main.cpp)
-    target_include_directories(${PROJECT_NAME}-main PUBLIC include)
+if (BUILD_EXAMPLE)
+    add_executable(${PROJECT_NAME}-example src/example/example.cpp)
+    target_include_directories(${PROJECT_NAME}-example PUBLIC include)
 endif()
 
 if (BUILD_TESTING)
