--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(MODULE_NAME test-yash)
 
 add_executable(${MODULE_NAME} TestYash.cpp)
-target_link_libraries(${MODULE_NAME} catch turtle yash)
+target_link_libraries(${MODULE_NAME} boost_unit_test_framework catch turtle yash)
 
 add_test(${MODULE_NAME} ${MODULE_NAME})
