--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -64,8 +64,7 @@ jobs:
     #    uses a compiled language
 
     - name: Build
-    - run: |
-      mkdir -p .build; cd .build; cmake -DBUILD_EXAMPLE=1 -DBUILD_TESTING=0 -DCMAKE_TOOLCHAIN_FILE=cmake/gcc.cmake ..; make
+    - run: mkdir -p .build; cd .build; cmake -DBUILD_EXAMPLE=1 -DBUILD_TESTING=0 -DCMAKE_TOOLCHAIN_FILE=cmake/gcc.cmake ..; make
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
