Added conioFunctions for example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ target_include_directories(${PROJECT_NAME} INTERFACE include)
 
 if (BUILD_EXAMPLE)
     add_executable(${PROJECT_NAME}-example src/example/example.cpp)
-    target_include_directories(${PROJECT_NAME}-example PUBLIC include)
+    target_include_directories(${PROJECT_NAME}-example PUBLIC include src/external/conioFunctions)
 endif()
 
 if (BUILD_TESTING)
