--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -65,7 +65,7 @@ jobs:
 
     - name: Build
       run: |
-        mkdir -p .build; cd .build; cmake -DBUILD_EXAMPLE=1 -DBUILD_TESTING=0 -DCMAKE_TOOLCHAIN_FILE=cmake/gcc.cmake ..; make
+        ./build.sh example
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
