--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -64,8 +64,7 @@ jobs:
     #    uses a compiled language
 
     - name: Build
-      run: |
-        ./build.sh example
+      run: ./build.sh example
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
