Moved example and updated README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ add_library(${PROJECT_NAME} INTERFACE)
 target_include_directories(${PROJECT_NAME} INTERFACE include)
 
 if (BUILD_EXAMPLE)
-    add_executable(${PROJECT_NAME}-example src/example/example.cpp)
+    add_executable(${PROJECT_NAME}-example example/example.cpp)
     target_include_directories(${PROJECT_NAME}-example PUBLIC include src/external/conioFunctions)
 endif()
 
